--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -35,6 +35,10 @@ jobs:
             python: '3.12'
             cibw_python: 312
             platform_id: win_amd64
+          - os: windows-latest
+            python: '3.13'
+            cibw_python: 313
+            platform_id: win_amd64
 
           # Linux 64-bit
           - os: ubuntu-latest
@@ -56,6 +60,10 @@ jobs:
           - os: ubuntu-latest
             python: '3.12'
             cibw_python: 312
+            platform_id: manylinux_x86_64
+          - os: ubuntu-latest
+            python: '3.13'
+            cibw_python: 313
             platform_id: manylinux_x86_64
 
           # macOS on Intel 64-bit
@@ -79,6 +87,12 @@ jobs:
             cibw_python: 312
             arch: x86_64
             platform_id: macosx_x86_64
+          - os: macos-13
+            python: '3.13'
+            cibw_python: 313
+            arch: x86_64
+            platform_id: macosx_x86_64
+
 
           # macOS on Apple M1 64-bit, supported for Python 3.10 and later
           - os: macos-14
@@ -94,6 +108,11 @@ jobs:
           - os: macos-14
             python: '3.12'
             cibw_python: 312
+            arch: arm64
+            platform_id: macosx_arm64
+          - os: macos-14
+            python: '3.13'
+            cibw_python: 313
             arch: arm64
             platform_id: macosx_arm64
 
@@ -176,7 +195,7 @@ jobs:
 
       - name: Install and test (Windows)
         if: startsWith(matrix.os, 'windows-')
-        shell: bash
+        shell: cmd # Use cmd on Windows to avoid bash environment taking priority over MSVC variables
         run: |
           python -m pip install --find-links=./wheelhouse/cp${{ matrix.cibw_python }}-${{ matrix.platform_id }} antspyx
           bash tests/run_tests.sh
