--- a/.github/workflows/wheels_faster.yml
+++ b/.github/workflows/wheels_faster.yml
@@ -16,27 +16,27 @@ jobs:
 
           # Windows 64-bit
           - os: windows-latest
-            python: '3.12'
-            cibw_python: 312
+            python: '3.13'
+            cibw_python: 313
             platform_id: win_amd64
 
           # Linux 64-bit
           - os: ubuntu-latest
-            python: '3.12'
-            cibw_python: 312
+            python: '3.13'
+            cibw_python: 313
             platform_id: manylinux_x86_64
 
           # macOS on Intel 64-bit
           - os: macos-13
-            python: '3.12'
-            cibw_python: 312
+            python: '3.13'
+            cibw_python: 313
             arch: x86_64
             platform_id: macosx_x86_64
 
           # macOS on Apple M1 64-bit, supported for Python 3.10 and later
           - os: macos-14
-            python: '3.12'
-            cibw_python: 312
+            python: '3.13'
+            cibw_python: 313
             arch: arm64
             platform_id: macosx_arm64
 
@@ -50,7 +50,6 @@ jobs:
         with:
           python-version: ${{ matrix.python }}
 
-        # Visual Studio
       - name: Set up MSVC x64
         if: matrix.platform_id == 'win_amd64'
         uses: ilammy/msvc-dev-cmd@v1
@@ -127,7 +126,7 @@ jobs:
 
       - name: Install and test (Windows)
         if: startsWith(matrix.os, 'windows-')
-        shell: bash
+        shell: cmd
         run: |
           python -m pip install --find-links=./wheelhouse/cp${{ matrix.cibw_python }}-${{ matrix.platform_id }} antspyx
           bash tests/run_tests.sh
