CI: Build all the wheels weekly
We now have quite a lot of wheels to build.

Switch to building on python=3.13 nightly, and build others only weekly.

--- a/.github/workflows/wheels_faster.yml
+++ b/.github/workflows/wheels_faster.yml
@@ -1,6 +1,8 @@
 name: wheels_faster
 
 on:
+  schedule: # Run nightly except Fridays, when the more extensive wheel runs
+    - cron: "0 5 * * 0-4,6"
   workflow_dispatch:
 
 jobs:
