--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -1,8 +1,8 @@
 name: build_wheels
 
 on:
-  schedule:
-    - cron: "0 5 * * *"
+  schedule: # Run weekly on Friday
+    - cron: '0 5 * * 5'
   release:
     types: [created]
   workflow_dispatch:
