ENH:  Migrate ANTsPyNet functionality (#802)
* ENH:  Migrate ANTsPyNet functionality

* ENH:  Migrate ANTsPyNet functionality

* BUG:  sklearn dependency.

* BUG:  more testing.

* BUG:  sklearn is deprecated.

* retrigger checks

* BUG: Failing docs.

* ENH:  Add .rst file.

* ENH:  Add scikit-learn dependency.

* BUG:  Remove redundancy.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,8 @@ dependencies = [
     "webcolors",
     "matplotlib",
     "Pillow",
-    "requests"
+    "requests",
+    "scikit-learn"
 ]
 
 [project.urls]
