COMP: Install SimpleITK to test

--- a/.github/workflows/ci-pytest.yml
+++ b/.github/workflows/ci-pytest.yml
@@ -42,6 +42,7 @@ jobs:
           conda activate antspy-env
           conda install coverage
           conda info
+          pip install SimpleITK
           pip install ./antspy-pr
           conda list
 
