CI: Pin simpleitk to 2.4.1 for Linux, seems 2.5.0 doesn't build

--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -159,7 +159,7 @@ jobs:
             echo "Installing system dependencies with yum"
             yum install -y gcc-c++ libpng-devel libpng
             echo "pip installing cmake and ninja"
-            python -m pip install cmake ninja setuptools SimpleITK
+            python -m pip install cmake ninja setuptools SimpleITK==2.4.1
 
           CIBW_BEFORE_ALL_WINDOWS: |
             python -m pip install cmake ninja setuptools SimpleITK
