--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ classifiers = [
 dependencies = [
     "pandas",
     "pyyaml",
-    "numpy<=2.0.1",
+    "numpy",
     "statsmodels",
     "webcolors",
     "matplotlib",
