COMP: don't use latest scipy
statsmodels needs scipy < 1.16 for now. This will be fixed later

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,8 @@ dependencies = [
     "matplotlib",
     "Pillow",
     "requests",
-    "scikit-learn"
+    "scikit-learn",
+    "scipy<1.16"
 ]
 
 [project.urls]
