--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -233,12 +233,11 @@ jobs:
         run: |
             python -m pip install --upgrade build
             python -m build --sdist --outdir dist
-      - name: Publish to Test PyPI
+      - name: Publish to PyPI
         uses: pypa/gh-action-pypi-publish@v1.12.4
         with:
           user: __token__
-          password: ${{ secrets.TEST_PYPI_API_TOKEN }}
-          repository-url: https://test.pypi.org/legacy/
+          password: ${{ secrets.PYPI_API_TOKEN }}
           packages-dir: dist/
           verify-metadata: true
           skip-existing: true
