CI: Update wheels_faster for macos-15-intel

--- a/.github/workflows/wheels_faster.yml
+++ b/.github/workflows/wheels_faster.yml
@@ -29,7 +29,7 @@ jobs:
             platform_id: manylinux_x86_64
 
           # macOS on Intel 64-bit
-          - os: macos-13
+          - os: macos-15-intel
             python: '3.13'
             cibw_python: 313
             arch: x86_64
