--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ build-backend = "scikit_build_core.build"
 name = "antspyx"
 version = "0.6.2"
 description = "A fast medical imaging analysis library in Python with algorithms for registration, segmentation, and more."
+license = { text = "Apache-2.0" }
 readme = "README.md"
 requires-python = ">=3.8"
 authors = [
