--- a/.github/workflows/wheels_faster.yml
+++ b/.github/workflows/wheels_faster.yml
@@ -100,10 +100,10 @@ jobs:
           CIBW_BEFORE_ALL_LINUX: |
             echo "Installing system dependencies with yum"
             yum install -y gcc-c++ libpng-devel libpng
-            python -m pip install cmake ninja setuptools SimpleITK==2.4.1
+            python -m pip install cmake ninja setuptools SimpleITK==2.4.1 nibabel
 
           CIBW_BEFORE_ALL_WINDOWS: |
-            python -m pip install cmake ninja setuptools SimpleITK
+            python -m pip install cmake ninja setuptools SimpleITK nibabel
 
           CIBW_ARCHS_MACOS: ${{ matrix.arch }}
 
@@ -111,7 +111,7 @@ jobs:
             CMAKE_OSX_ARCHITECTURES=${{ matrix.arch }} CMAKE_PREFIX_PATH=/usr/local
 
           CIBW_BEFORE_ALL_MACOS: |
-            python -m pip install cmake ninja setuptools SimpleITK
+            python -m pip install cmake ninja setuptools SimpleITK nibabel
             brew update
             if ! brew list libpng &>/dev/null; then
                 HOMEBREW_NO_AUTO_UPDATE=1 brew install libpng
