--- a/.github/workflows/ci-pytest.yml
+++ b/.github/workflows/ci-pytest.yml
@@ -23,8 +23,9 @@ jobs:
         shell: bash -el {0}
     steps:
       - name: Setup Miniconda
-        uses: conda-incubator/setup-miniconda@505e6394dae86d6a5c7fbb6e3fb8938e3e863830 # v3.1.1, devs recommend using hash
+        uses: conda-incubator/setup-miniconda@835234971496cad1653abb28a638a281cf32541f # v3.2.0, devs recommend using hash
         with:
+          channels: conda-forge
           miniforge-version: latest
           python-version: ${{ env.python_version }}
           auto-update-conda: true
