CI: Fixing numpy dependencies
Upgrade to numpy 2.4 forced changes to reshape that are not compatible with numpy < 2.1

Add debug wheel uploads

--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -208,6 +208,17 @@ jobs:
           artifacts: ./wheelhouse/cp${{ matrix.cibw_python }}-${{ matrix.platform_id }}/*.whl
           token: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Upload debug artifacts on failure
+        if: ${{ failure() }}
+        uses: actions/upload-artifact@v4
+        with:
+          name: debug-${{ env.PACKAGE_NAME }}-${{ env.PACKAGE_VERSION }}-cp${{ matrix.cibw_python }}-${{ matrix.platform_id }}
+          path: |
+            wheelhouse/**
+            ./**/*.log
+            ./**/CMakeCache.txt
+          if-no-files-found: warn
+
   publish:
     name: Publish all wheels and sdist to PyPI
     runs-on: ubuntu-latest
