--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ classifiers = [
 dependencies = [
     "pandas",
     "pyyaml",
-    "numpy>2.1.0",
+    "numpy<2.4.0",
     "statsmodels",
     "webcolors",
     "matplotlib",
