CI: Version tag images X.Y.Z not vX.Y.Z. Update latest on release

--- a/.github/workflows/ci-docker.yml
+++ b/.github/workflows/ci-docker.yml
@@ -2,10 +2,14 @@ name: ci-docker
 on:
   schedule:
     - cron: "30 6 * * *"
-  push:  
+  push:
     tags:
       - 'v[0-9]+.[0-9]+.[0-9]+'
   workflow_dispatch:
+
+env:
+  DOCKER_REPO: antsx/antspy
+  DOCKER_TAGS: ''
 
 jobs:
   docker:
@@ -28,6 +32,29 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
+        name: Compute Docker tag
+        shell: bash
+        run: |
+            REF="${GITHUB_REF}"
+
+            DOCKER_TAGS=""
+
+            if [[ "$REF" == refs/tags/* ]]; then
+              TAG="${REF#refs/tags/}"
+
+              # Strip leading 'v' only for vA.B.C where A,B,C are integers
+              if [[ "$TAG" =~ ^v[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
+                  TAG="${TAG#v}"
+                  DOCKER_TAGS="${DOCKER_REPO}:${TAG},${DOCKER_REPO}:latest"
+              else
+                  DOCKER_TAGS="${DOCKER_REPO}:${TAG}"
+              fi
+            else
+              DOCKER_TAGS="${DOCKER_REPO}:${GITHUB_REF_NAME}"
+            fi
+
+            echo "DOCKER_TAGS=${DOCKER_TAGS}" >> "$GITHUB_ENV"
+      -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v3
       -
@@ -41,5 +68,5 @@ jobs:
           context: .
           platforms: linux/amd64
           push: ${{ github.repository == 'ANTsX/ANTsPy' && (github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/tags/v')) }}
-          tags: ${{ github.event_name == 'schedule' && 'antsx/antspy:nightly,antsx/antspy:latest' || steps.meta.outputs.tags }}
+          tags: ${{ github.event_name == 'schedule' && 'antsx/antspy:nightly' || env.DOCKER_TAGS }}
           labels: ${{ steps.meta.outputs.labels }}
