--- a/.github/workflows/ci-docker.yml
+++ b/.github/workflows/ci-docker.yml
@@ -68,5 +68,5 @@ jobs:
           context: .
           platforms: linux/amd64
           push: ${{ github.repository == 'ANTsX/ANTsPy' && (github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/tags/v')) }}
-          tags: ${{ github.event_name == 'schedule' && 'antsx/antspy:nightly' || env.DOCKER_TAGS }}
+          tags: ${{ github.event_name == 'schedule' && format('{0}:nightly', env.DOCKER_REPO) || env.DOCKER_TAGS }}
           labels: ${{ steps.meta.outputs.labels }}
